@@ -3,8 +3,10 @@ apt (0.9.3) unstable; urgency=low
   [ David Kalnischkies ]
   * apt-pkg/contrib/strutl.cc:
     - remove the message size limit from ioprintf and strprintf
+  * apt-pkg/contrib/configuration.cc:
+    - add a more versatile Dump() method
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sat, 21 Apr 2012 18:26:31 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 12:27:47 +0200
 
 apt (0.9.2) unstable; urgency=low
 
